--- a/MastodonManual.tex
+++ b/MastodonManual.tex
@@ -131,53 +131,26 @@
 
 
 
-\title{
-	{\fontsize{60}{70}\selectfont Mastodon}
-	{\fontsize{40}{50}\selectfont documentation} \\ 
-	\protect{\includegraphics[width=10cm]{figures/Mastodon-logo_jy-01.png}}
-}
-
-\author{Tobias Pietzsch \& Jean-Yves Tinevez}
-
 \begin{document}
-\titlehead{%
-  \makebox[0pt][l]{\smash{%
-    \parbox[t][\dimexpr\textheight-\ht\strutbox\relax][b]{\textwidth}{%
-      \includegraphics[width=4cm]{figures/Pasteur-logo-medium.png}
-      \hfill
-      \includegraphics[width=4cm]{figures/MPICBG_logo_bw.png}%
-  }}}}
-\maketitle
-\thispagestyle{empty}
 
+\input{ src/TitlePage.tex }
 
 \newpage
-
-This document constitutes the \wikilink{Mastodon}{Mastodon} documentation. 
-It is divided in four parts, that group sections by interest.
-\begin{myitemize}
-	
-	\item The first part contains three tutorials, aimed at end-users and focused on cell tracking.
-	They are meant to guide users with the Mastodon software and cover three applications of cell tracking Mastodon:
-	\begin{myitemize}
-		\item automated cell or particle tracking;
-		\item manual curation and correction of tracking results;
-		\item manual and semi-automatic tracking.
-	\end{myitemize}
-	
-	\item The second part contains technical information. ...
-	
-	\item The third part is aimed at advanced users, ...
-	
-	\item The last part is made of tutorials aimed at Java developers ...
-	
-\end{myitemize}
-
-
+\input{ src/Preamble.tex }
 
 \newpage
 \tableofcontents
+
 \newpage
+\input{ src/Chapter1.tex }
+
+\newpage
+\part{Tutorials.}
+
+\newpage
+\input{ src/Chapter2.tex }
+
+
 
 
 
