Intro first tutorial.

--- a/src/Chapter2.tex
+++ b/src/Chapter2.tex
@@ -1,3 +1,9 @@
-\section{Automated cell tracking on large, multi-view images.}
+\section{Getting started with Mastodon.}
 
-blablabla
+This tutorial is the starting point for new Mastodon users. 
+It will walk you through basic operations in Mastodon, opening a dataset and creating a Mastodon project, automatically detect cells and link them, and show you how to use the main views of Mastodon.
+We don't go into details, and will revisit the features we survey here later.
+
+Mastodon was created specially because we needed to harness very big, multi-view images. We wanted to generate  comprehensive lineages and follow a large number of cells over a very long time.
+This accumulation of inflated words is tied to the very large  - in objective disk space  occupation - images we deal with using modern microscopy tools. 
+Such datasets might not be optimal for a first tutorial with Mastodon.
