Add link (and format it) to dataset on Zenodo.

--- a/MastodonManual.tex
+++ b/MastodonManual.tex
@@ -119,14 +119,16 @@
 \end{center}
 }
 
+% Making 1.5 spaced lines
+\usepackage{setspace}
+\onehalfspacing
 
+% Colors
+\usepackage{xcolor}
 
-
-
-
-
-
-
+% Syntax highlighting
+\usepackage{minted}
+\setminted{fontsize=\small,baselinestretch=1}
 
 
 
