Getting and launching Mastodon.

--- a/MastodonManual.tex
+++ b/MastodonManual.tex
@@ -137,6 +137,8 @@
 % Figure caption with special fonts.
 \usepackage[font=small,labelfont=bf]{caption}
 
+% Smaller margins. Paper is expensive and we write in bug characters.
+\usepackage[margin=1in]{geometry}
 
 
 \begin{document}
