--- a/src/Preamble.tex
+++ b/src/Preamble.tex
@@ -1,3 +1,5 @@
+\section*{Preamble.}
+
 This document constitutes the \wikilink{Mastodon}{Mastodon} documentation. 
 It is divided in four parts, that group sections by interest.
 \begin{myitemize}
