Table for BDV navigation key bindings.

--- a/MastodonManual.tex
+++ b/MastodonManual.tex
@@ -123,9 +123,6 @@
 \usepackage{setspace}
 \onehalfspacing
 
-% Colors
-\usepackage{xcolor}
-
 % Syntax highlighting
 \usepackage{minted}
 \setminted{fontsize=\small,baselinestretch=1}
@@ -140,6 +137,15 @@
 % Smaller margins. Paper is expensive and we write in bug characters.
 \usepackage[margin=1in]{geometry}
 
+% Tables.
+\usepackage{booktabs}
+\usepackage{graphicx}
+
+
+
+%---------------------------------------------------------------------------------
+% Contents
+%---------------------------------------------------------------------------------
 
 \begin{document}
 
