--- a/src/Chapter2.tex
+++ b/src/Chapter2.tex
@@ -147,3 +147,20 @@ A BDV window should appear and if it does everything is right.
 \end{center}
 
 It is almost a regular BDV window and if you already know who to use it and the key bindings you should find your marks quickly.
+Below we give the commands and key-bindings for navigation in a Mastodon-BDV window. 
+They are indeed close to what is found in the standard \Bdv but some changes. 
+\textbf{Please note:} You can reconfigure almost everything in Mastodon, as we will see later, including key-bindings.
+In this tutorial and the next ones, the key-bindings we present are for the \texttt{Default} configuration.
+In the table~\ref{tab:MastodonBDVNavigationKeys} you will find the key bindings to navigate through the image data.
+
+\begin{table}[!htbp]
+    \centering
+    
+    \caption{Default navigation key-bindings for Mastodon-BDV views.}
+
+    \input{src/TableBDVNavigationKeys.tex}
+
+    \label{tab:MastodonBDVNavigationKeys}
+    \vspace{-10pt}
+
+\end{table}
