--- a/src/TableBDVNavigationKeys.tex
+++ b/src/TableBDVNavigationKeys.tex
@@ -10,7 +10,7 @@
     Move in X \& Y.                 & \keys{Right-click} and \keys{Drag}.
     \\ \midrule
     
-    Move in Z.                      & \keys{Mouse-wheel}. Press and hold shift to move faster, control to move slower.
+    Move in Z.                      & \keys{Mouse-wheel}. Press and hold \keys{Shift} to move faster, \keys{Control} to move slower.
     \\ \midrule
     
     Align view with X / Y / Z axes. &  
