--- a/src/TableBDVNavigationKeys.tex
+++ b/src/TableBDVNavigationKeys.tex
@@ -15,11 +15,11 @@
     
     Align view with X / Y / Z axes. &  
     \begin{minipage}[t]{0.7\textwidth}
-    \begin{itemize}
+    \begin{myitemize}
         \item  Align with XY plane: \keys{Shift+Z}. 
         \item Align with YZ plane: \keys{Shift+X}. 
         \item Align with XZ plane: \keys{Shift+C} or \keys{Shift+Y}. 
-    \end{itemize}
+    \end{myitemize}
     The view will rotate around the location you clicked.
     \end{minipage}
     
