More on linking wizard.

--- a/MastodonManual.tex
+++ b/MastodonManual.tex
@@ -141,6 +141,9 @@
 \usepackage{booktabs}
 \usepackage{graphicx}
 
+% Wrap figures around text.
+\usepackage{wrapfig}
+
 
 
 %---------------------------------------------------------------------------------
