--- a/References.bib
+++ b/References.bib
@@ -1,3 +1,49 @@
+@article{Jaqaman2008,
+   author = {Jaqaman, Khuloud and Loerke, Dinah and Mettlen, Marcel and Kuwata, Hirotaka and Grinstein, Sergio and Schmid, Sandra L. and Danuser, Gaudenz},
+   title = {Robust single-particle tracking in live-cell time-lapse sequences},
+   journal = {Nature Methods},
+   volume = {5},
+   pages = {695},
+   DOI = {10.1038/nmeth.1237
+https://www.nature.com/articles/nmeth.1237#supplementary-information},
+   url = {https://doi.org/10.1038/nmeth.1237},
+   year = {2008},
+   type = {Journal Article}
+}
+
+
+@article{TrackMate,
+	Abstract = {We present TrackMate, an open source Fiji plugin for the automated, semi-automated, and manual tracking of single-particles. It offers a versatile and modular solution that works out of the box for end users, through a simple and intuitive user interface. It is also easily scriptable and adaptable, operating equally well on 1D over time, 2D over time, 3D over time, or other single and multi-channel image variants. TrackMate provides several visualization and analysis tools that aid in assessing the relevance of results. The utility of TrackMate is further enhanced through its ability to be readily customized to meet specific tracking problems. TrackMate is an extensible platform where developers can easily write their own detection, particle linking, visualization or analysis algorithms within the TrackMate environment. This evolving framework provides researchers with the opportunity to quickly develop and optimize new algorithms based on existing TrackMate modules without the need of having to write de novo user interfaces, including visualization, analysis and exporting tools. The current capabilities of TrackMate are presented in the context of three different biological problems. First, we perform Caenorhabditis-elegans lineage analysis to assess how light-induced damage during imaging impairs its early development. Our TrackMate-based lineage analysis indicates the lack of a cell-specific light-sensitive mechanism. Second, we investigate the recruitment of NEMO (NF-κB essential modulator) clusters in fibroblasts after stimulation by the cytokine IL-1 and show that photodamage can generate artifacts in the shape of TrackMate characterized movements that confuse motility analysis. Finally, we validate the use of TrackMate for quantitative lifetime analysis of clathrin-mediated endocytosis in plant cells.},
+	Author = {Jean-Yves Tinevez and Nick Perry and Johannes Schindelin and Genevieve M. Hoopes and Gregory D. Reynolds and Emmanuel Laplantine and Sebastian Y. Bednarek and Spencer L. Shorte and Kevin W. Eliceiri},
+	Doi = {https://doi.org/10.1016/j.ymeth.2016.09.016},
+	Issn = {1046-2023},
+	Journal = {Methods},
+	Keywords = {Single-particle tracking, Phototoxicity, Clathin-mediated endocytosis, Image analysis, Open-source software, Microscopy},
+	Note = {Image Processing for Biologists},
+	Pages = {80 - 90},
+	Title = {TrackMate: An open and extensible platform for single-particle tracking},
+	Url = {http://www.sciencedirect.com/science/article/pii/S1046202316303346},
+	Volume = {115},
+	Year = {2017},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S1046202316303346},
+	Bdsk-Url-2 = {https://doi.org/10.1016/j.ymeth.2016.09.016}}
+
+
+@article{Chenouard2014,
+   author = {Chenouard, Nicolas and Smal, Ihor and de Chaumont, Fabrice and Maška, Martin and Sbalzarini, Ivo F. and Gong, Yuanhao and Cardinale, Janick and Carthel, Craig and Coraluppi, Stefano and Winter, Mark and Cohen, Andrew R. and Godinez, William J. and Rohr, Karl and Kalaidzidis, Yannis and Liang, Liang and Duncan, James and Shen, Hongying and Xu, Yingke and Magnusson, Klas E. G. and Jaldén, Joakim and Blau, Helen M. and Paul-Gilloteaux, Perrine and Roudot, Philippe and Kervrann, Charles and Waharte, François and Tinevez, Jean-Yves and Shorte, Spencer L. and Willemse, Joost and Celler, Katherine and van Wezel, Gilles P. and Dan, Han-Wei and Tsai, Yuh-Show and de Solórzano, Carlos Ortiz and Olivo-Marin, Jean-Christophe and Meijering, Erik},
+   title = {Objective comparison of particle tracking methods},
+   journal = {Nature Methods},
+   volume = {11},
+   pages = {281},
+   DOI = {10.1038/nmeth.2808
+https://www.nature.com/articles/nmeth.2808#supplementary-information},
+   url = {https://doi.org/10.1038/nmeth.2808},
+   year = {2014},
+   type = {Journal Article}
+}
+
+
+
 @article{bdv,
    author = {Pietzsch, Tobias and Saalfeld, Stephan and Preibisch, Stephan and Tomancak, Pavel},
    title = {BigDataViewer: visualization and processing for large image data sets},
