--- a/src/Chapter2.tex
+++ b/src/Chapter2.tex
@@ -181,6 +181,11 @@ The image data will be loaded along with the lineages.
 
 \subsection{Detecting cells.}
 
+\begin{wrapfigure}{r}{0.4\textwidth}
+    \centering
+         \includegraphics[width=0.4\textwidth]{figures/Mastodon_DetectionWizard_01.png}
+\end{wrapfigure}
+
 We want to track automatically all the cells in this dataset, and the first step is therefore to detect them.
 Mastodon ships a wizard to perform cell detection. 
 It is very much inspired by the \wikilink{TrackMate}{TrackMate} GUI, and if you know this software you will find your marks here.
@@ -188,9 +193,6 @@ Also, the algorithms are very close to what was in TrackMate~\cite{TrackMate}, b
 
 The detection wizard can be launched from the \menu{Plugins > Tracking > Detection...} menu item. 
 You should have a window like this one appearing:
-\begin{center}
-         \includegraphics[width=0.4\textwidth]{figures/Mastodon_DetectionWizard_01.png}
-\end{center}
 
 Like for TrackMate, the automated tracking user interface uses \textit{wizards} to enter parameters, select algorithms, \textit{etc.}
 You can navigate back and forth with the \menu{\smallimg{arrow_right.png} Next} and  \menu{\smallimg{arrow_left.png} Previous} buttons. 
@@ -262,15 +264,16 @@ From the shape of the histogram, we can infer that a threshold value around 100 
 However we also need to change the diameter parameter, which will change the range of quality values.
 After trial and errors, values around 15 pixels for the diameter and 400 for the threshold seem to work.
 
+\begin{wrapfigure}{r}{0.4\textwidth}
+    \centering
+    \includegraphics[height=0.40\textwidth, trim=0.5cm 0.5cm .5cm .5cm, clip]{figures/Mastodon_DetectionResuts.png}
+\end{wrapfigure}
+
 Note that you can run the preview on any frame.
 You just have to move the time slider on the preview window.
 Once you are happy with the parameters, click on the \menu{\smallimg{arrow_right.png} Next} button.
 All the frames specified in the ROI (if any) will be processed. 
-In our case it should conclude quickly and the following panel should appear:
-
-\begin{center}
-         \includegraphics[height=0.25\textheight]{figures/Mastodon_DetectionResuts.png}
-\end{center}
+In our case detection should conclude quickly and the following panel should appear:
 
 We now have more than 1000 cells detected and this concludes the detection step.
 Click on the \menu{\smallimg{accept-icon.png} Finish} button, and the wizard will disappear.
@@ -289,6 +292,8 @@ A particle linking or tracking algorithm accepts a collection of spots, ordered 
 All the spots you can reach by starting from one spot and navigating across links build a \textit{track}, and in our case it represents one cell (or any other object) followed over time. 
 In most cases there is one spot per frame for a track, meaning that that a spot has at most one incoming link (spot from previous frame) and one outgoing kink (spot in next frame). 
 But some algorithms can accommodate \textit{e.g.} dividing cells (2 outgoing links for the mother cell going to the two daughter cells) and merging events. There is a vast literature behind tracking algorithms, and it is an active domain of Research. A relatively recent paper compare implementation and list some pros and pitfalls of many of them~\cite{Chenouard2014}.
+
+\subsubsection{Selecting target spots for linking.}
 
 \begin{wrapfigure}{r}{0.3\textwidth}
     \centering
@@ -309,6 +314,9 @@ There are two modes:
 \end{myitemize}
 For now, just leave the parameters as they are, which will include all spots in the linking process, and click next.
 You can now choose between several linking algorithms. 
+
+\subsubsection{Available linking algorithms in Mastodon.}
+
 In Mastodon, they fall mainly in two categories.
 
 The first two LAP trackers are based on the \textbf{Linear Assignment Problem (LAP) framework}, first developed by Jaqaman \textit{et al.}~\cite{Jaqaman2008}, with important differences from the original paper described elsewhere~\cite{TrackMate}. We focused on this method for it gave us a lot of flexibility and it can be configured easily to handle many cases. You can tune it to allow splitting events, where a track splits in two, for instance following a cell that encounters mitosis. Merging events are handled too in the same way. More importantly are gap-closing events, where a spot disappear for one frame (because it moves out of focus, because detection failed, ...) but the track manages to recuperates and connect with reappearing spots later.
@@ -319,4 +327,63 @@ In Mastodon the LAP algorithms exists in two flavors: a simple one and a not sim
     
     \item The not simple one allows to detect any kind of event, so if you need to build tracks that are splitting or merging, you must go for this one. If you want to forbid the detection of gap-closing events, you want to use it as well. Also, you can alter the cost calculation to disfavor the linking of spots that have very different feature values.
 \end{myitemize}
+
+The third tracker is called \textbf{Linear motion Kalman linker}.
+It can deal specifically with linear motion, or particles moving with a roughly constant velocity.
+This velocity does not need to be the same for all particles. 
+It relies on the Kalman filter\footnote{\href{https://en.wikipedia.org/wiki/Kalman_filter}{\coloredlink{Kalman filter on Wikipedia.}}} to predict the most probable position of a particle undergoing (quasi) constant velocity movement.
+
+\subsubsection{How to pick the right linking algorithm?}
+
+The right choice of a particle linking algorithm is conditioned by the expected motion of the object you track.
+As a rule of thumb, you can make a decision following these simple rules:
+\begin{myitemize}
+    
+    \item If the objects you track are transported by an active process and have a motion for which the velocity vector changes slowly, then pick the  \textbf{Linear motion Kalman linker}.
+    
+    \item If the object motion is random (like in Brownian motion) or unknown, pick on the LAP linker. If the objects you track do not divide, nor merge, pick the \textbf{Simple LAP linker}.
+    
+    \item If the objects divide or merge, or if you want to specify linking costs based on numerical features (like spot mean intensity), then pick the \textbf{LAP linker}.
+    
+\end{myitemize}
+In our case, we need the \textbf{Simple LAP linker}. Select it and click \menu{\smallimg{arrow_right.png} Next}.
+
+\subsubsection{Running the Simple LAP linker.}
+
+This linker only requires the specification of three parameters.
+
+The first one is the \textbf{Max linking distance} during frame-to-frame linking. 
+It is the distance beyond which linking a spot to another one in the next frame will be forbidden. 
+For instance, if you know that your objects move by at most 5~{\textmu}m from one frame to the next, pick a value slightly larger, for instance 6~{\textmu}m.
+Distances are expressed in whatever physical units the BDV dataset specified.
+In our case it is pixels. 
+
+\begin{center}
+    \includegraphics[height=0.25\textheight,trim=0.5cm .5cm .5cm .5cm,clip]{figures/Mastodon_LinkingWizard_03.png}
+\end{center}
+
+In practical cases, it can happen that the detection step might miss an object in some frames, then detect again later.
+These gaps will result in generating several small tracks for a single objects, which is one of the main course of spurious results when analyzing tracks. 
+The simple LAP linker can bridge over missed detections.
+It does so by inspecting small tracks that results from frame-to-frame linking, and tries to connect the end of one with the beginning of another one.
+The last two parameters of the linker specifies how they are bridged. 
+The \textbf{Max gap-closing distance} specifies how far can we look for candidates when we try to bridge the end of a track with the beginning of another one.
+The \textbf{Max frame gap} specifies how far they can be in time. 
+For instance a Max-frame-gap of 2 means that we can bridge the end of a track at frame $t$ with the beginning of a track at frame $t+2$.
+Which results of bridging over detections missed by no more than 1 frame.
+
+In our case, the default parameters turn to work fine. 
+Click \menu{\smallimg{arrow_right.png} Next} and the linking will proceed. 
+Click on the \menu{\smallimg{accept-icon.png} Finish} button to end the tracking process.
+If you have a BDV window opened, it should be updated with the tracking results, like the following.
+By default the tracks are represented by colored lines, extending backward in time.
+Points in tracks that are close to the current time-point are greenish.
+Points that are far back in time are painted in red.
+When you change the Z focus, the points that are not close to the current Z-slice are faded away.
+ 
+\begin{center}
+    \includegraphics[width=0.6\textwidth,trim=0.5cm .5cm .5cm .5cm,clip]{figures/Mastodon_LinkingResults.png}
+\end{center}
+
+ 
 
