Finish chapter 2, start chapter 3 and add placeholders for what's next.

--- a/MastodonManual.tex
+++ b/MastodonManual.tex
@@ -172,6 +172,18 @@
 \newpage
 \input{ src/Chapter3.tex }
 
+\newpage
+\input{ src/Chapter4.tex }
+
+\newpage
+\input{ src/Chapter5.tex }
+
+\newpage
+\input{ src/Chapter6.tex }
+
+
+\newpage
+\part{Technical information.}
 
 \newpage
 \bibliographystyle{plainnat}
