--- a/References.bib
+++ b/References.bib
@@ -1,3 +1,18 @@
+@article{McDole2018,
+   author = {McDole, Katie and Guignard, Léo and Amat, Fernando and Berger, Andrew and Malandain, Grégoire and Royer, Loïc A. and Turaga, Srinivas C. and Branson, Kristin and Keller, Philipp J.},
+   title = {<em>In Toto</em> Imaging and Reconstruction of Post-Implantation Mouse Development at the Single-Cell Level},
+   journal = {Cell},
+   volume = {175},
+   number = {3},
+   pages = {859-876.e33},
+   ISSN = {0092-8674},
+   DOI = {10.1016/j.cell.2018.09.031},
+   url = {https://doi.org/10.1016/j.cell.2018.09.031},
+   year = {2018},
+   type = {Journal Article}
+}
+
+
 @article{Jaqaman2008,
    author = {Jaqaman, Khuloud and Loerke, Dinah and Mettlen, Marcel and Kuwata, Hirotaka and Grinstein, Sergio and Schmid, Sandra L. and Danuser, Gaudenz},
    title = {Robust single-particle tracking in live-cell time-lapse sequences},
