--- a/src/Chapter3.tex
+++ b/src/Chapter3.tex
@@ -25,6 +25,19 @@ navigating in tracksheme
 the zoom in trackscheme
 
 
+\begin{table}[!htbp]
+    \centering
+    
+    \caption{Default navigation key-bindings for Mastodon-TrackScheme views.}
+
+    \input{src/TableTrackSchemeNavigationKeys.tex}
+
+    \label{tab:MastodonTrackSchemeNavigationKeys}
+    \vspace{-10pt}
+
+\end{table}
+
+
 \subsection{Linking several views together.}
 
 the locks.
